--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,3 @@
-<!-- This is a static file -->
-<!-- served from your routes in server.js -->
-
-<!-- You might want to try something fancier: -->
-<!-- html/nunjucks docs: https://mozilla.github.io/nunjucks/ -->
-<!-- pug: https://pugjs.org/ -->
-<!-- haml: http://haml.info/ -->
-<!-- hbs(handlebars): http://handlebarsjs.com/ -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,25 +12,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" defer></script>
 
-    <script src="/p5.min.js"></script>
-    <script src="/p5.dom.min.js"></script>
-    <script src="/p5.sound.min.js"></script>
-    <script src="/js/helpers.js"></script>
+    <script src="../lib/p5.min.js"></script>
+    <script src="../lib/p5.dom.min.js"></script>
+    <script src="../lib/p5.sound.min.js"></script>
+    <script src="../public/js/helpers.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 
-    <script src="/js/objects.js"></script>
-    <script src="/js/drawing.js"></script>
-    <script src="/js/capture.js"></script>
+    <script src="../public/js/objects.js"></script>
+    <script src="../public/js/drawing.js"></script>
+    <script src="../public/js/capture.js"></script>
 
-    <script src="/js/main.js" defer></script>
+    <script src="../public/js/main.js" defer></script>
   </head>
   
   <body>
 
     <div id="header" class="container-fluid mt-5">
       <h1 class="text-center"> BE THE VALLEY </h1>
+    </div>
+
+	<div id="disclaimer" class="container-fluid mt-3">
+      <h3 class="text-center"> For technical testing only - not reflective of design. </h3>
     </div>
 
     <!--<form method="POST" action="/submit-name">
