--- a/views/index.html
+++ b/views/index.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/css/style.css">
 
-    <script src="/js/objects.js"></script>
-    <script src="/js/drawing.js"></script>
-    <script src="/js/capture.js"></script>
+    <script src="../public/js/objects.js"></script>
+    <script src="../public/js/drawing.js"></script>
+    <script src="../public/js/capture.js"></script>
     
-    <script src="/js/forms.js" defer></script>
-    <script src="/js/buttons.js" defer></script>
+    <script src="../public/js/forms.js" defer></script>
+    <script src="../public/js/buttons.js" defer></script>
 
     <script src="../public/js/main.js" defer></script>
   </head>
