--- a/views/index.html
+++ b/views/index.html
@@ -21,22 +21,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" defer></script>
 
-    <script src="/p5.min.js"></script>
-    <script src="/p5.dom.min.js"></script>
-    <script src="/p5.sound.min.js"></script>
-    <script src="/js/helpers.js"></script>
+    <script src="lib/p5.min.js"></script>
+    <script src="lib/p5.dom.min.js"></script>
+    <script src="lib/p5.sound.min.js"></script>
+    <script src="public/js/helpers.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 
-    <script src="../public/js/objects.js"></script>
-    <script src="../public/js/drawing.js"></script>
-    <script src="../public/js/capture.js"></script>
+    <script src="public/js/objects.js"></script>
+    <script src="public/js/drawing.js"></script>
+    <script src="public/js/capture.js"></script>
     
-    <script src="../public/js/forms.js" defer></script>
-    <script src="../public/js/buttons.js" defer></script>
+    <script src="public/js/forms.js" defer></script>
+    <script src="public/js/buttons.js" defer></script>
 
-    <script src="/js/main.js" defer></script>
+    <script src="public/js/main.js" defer></script>
   </head>
   
   <body>
