--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/style.css">
 
+    <script src="/public/js/fb-sdk.js"></script>
     <script src="public/js/objects.js"></script>
     <script src="public/js/drawing.js"></script>
     <script src="public/js/capture.js"></script>
@@ -64,6 +65,11 @@
       <button id="dlPhoto" class="btn btn-primary mx-3">Download Photo</button>
       <button id="dlVideo" class="btn btn-primary mx-3">Download Video</button>
     </div>
+
+    <div class="d-flex justify-content-center py-5">
+        <button id="shareFacebook" class="btn btn-primary mx-3">Facebook Share</button>
+        <button id="shareTwitter" class="btn btn-primary mx-3">Twitter Share</button>
+      </div>
 
   </body>
 </html>
