--- a/views/index.html
+++ b/views/index.html
@@ -93,8 +93,8 @@
               <p class="text-left">Share your creation</p>
               <input id="shareurl" name="shareURL" type="text" class="form-control" autocomplete="off">
               <div class="d-flex flex-fill mt-3">
-                <img src="../images/icons/twitter.png" class="socialicon">
-                <img src="../images/icons/facebook.png" class="socialicon ml-3">
+                <img id="shareTwitter" src="../images/icons/twitter.png" class="socialicon">
+                <img id="shareFacebook" src="../images/icons/facebook.png" class="socialicon ml-3">
               </div>
           </div>
 
