Added gitignore / First pass page 1

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,11 @@
 }
 
 @font-face {
+  font-family: "Helvetica Bold";
+  src: url("../fonts/HelveticaNeueLTStd-Bd.otf");
+}
+
+@font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-Regular.ttf");
 }
@@ -31,6 +36,18 @@ h1 {
   line-height: .87em !important;
 
   color: #F04933 !important;
+}
+
+h2 {
+  font-family: "Helvetica Bold" !important;
+  font-size: 1.2rem !important;
+  line-height: 1em !important;
+
+  color: #231f20 !important;
+}
+
+h2 span {
+  font-size: .95rem !important;
 }
 
 h3 {
@@ -52,6 +69,10 @@ small {
 .btn {
   background-color: #2e9f48 !important;
   border: 0;
+}
+
+.ctoa {
+  font-size: 1rem !important;
 }
 
 #canvas-holder {
@@ -76,7 +97,7 @@ small {
 
 .footer {
   height: 96px;
-  background-color: #231f20;
+  background-color: #4B4E4D;
 }
 
 .footer #footercopy {
