Hide download photo+video (debug)

--- a/views/index.html
+++ b/views/index.html
@@ -88,20 +88,22 @@
             </form>
           </div>
 
-          <!--<div id="downloading" class="d-flex flex-column align-items-center flex-shrink-2 border-right px-4">
-              <p class="text-center mb-1">Download your creation</p>
-              <button id="dlPhoto" class="btn btn-primary mt-2 w-100">Image</button>
-              <button id="dlVideo" class="btn btn-primary mt-2 w-100">Video</button>
-          </div>
+          <div style="display: none">
+            <div id="downloading" class="d-flex flex-column align-items-center flex-shrink-2 border-right px-4">
+                <p class="text-center mb-1">Download your creation</p>
+                <button id="dlPhoto" class="btn btn-primary mt-2 w-100">Image</button>
+                <button id="dlVideo" class="btn btn-primary mt-2 w-100">Video</button>
+            </div>
 
-          <div id="sharing" class="d-flex flex-column align-items-start flex-fill px-4">
-              <p class="text-left">Share your creation</p>
-              <input id="shareurl" name="shareURL" type="text" class="form-control" autocomplete="off">
-              <div class="d-flex flex-fill mt-3">
-                <img id="shareTwitter" src="../images/icons/twitter.png" class="socialicon">
-                <img id="shareFacebook" src="../images/icons/facebook.png" class="socialicon ml-3">
-              </div>
-          </div>-->
+            <div id="sharing" class="d-flex flex-column align-items-start flex-fill px-4">
+                <p class="text-left">Share your creation</p>
+                <input id="shareurl" name="shareURL" type="text" class="form-control" autocomplete="off">
+                <div class="d-flex flex-fill mt-3">
+                  <img id="shareTwitter" src="../images/icons/twitter.png" class="socialicon">
+                  <img id="shareFacebook" src="../images/icons/facebook.png" class="socialicon ml-3">
+                </div>
+            </div>
+        </div>
 
       </div>
 
