set up system for exceptions to strange char spacing

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
         <!-- p5 canvas goes here -->
       </div>
 
-      <!--<div id="submission" class="d-flex justify-content-center w-75 flex-fill">
+      <div id="submission" class="d-flex justify-content-center w-75 flex-fill">
 
           <div id="namefield" class="px-5 w-50">
             <form id="nameform" name="nameform">
@@ -70,13 +70,13 @@
                       <div class="form-group row">
                           <label for="firstInput" class="col-sm-3 col-form-label text-muted">Line 1</label>
                           <div class="col-sm-6 pl-0">
-                            <input id="firstInput" class="form-control" name="firstname" type="text" maxlength="7" autocomplete="off">
+                            <input id="firstInput" class="form-control" name="firstname" type="text" maxlength="7">
                           </div>
                         </div>
                       <div class="form-group row">
                           <label for="lastInput" class="col-sm-3 col-form-label text-muted">Line 2</label>
                           <div class="col-sm-6 pl-0">
-                            <input id="lastInput" class="form-control" name="lastname" type="text" maxlength="7" autocomplete="off">
+                            <input id="lastInput" class="form-control" name="lastname" type="text" maxlength="7">
                           </div>
                       </div>
                       <div class="form-group row">
@@ -88,9 +88,9 @@
             </form>
           </div>
 
-      </div>-->
+      </div>
 
-      <div id="exports" class="d-flex justify-content-center w-75 flex-fill mb-5">
+      <!--<div id="exports" class="d-flex justify-content-center w-75 flex-fill mb-5">
               <div id="downloading" class="flex-fill border-right px-4">
                   <h2 class="text-left mb-1">Download your creation</h2>
                   <button id="dlPhoto" class="btn btn-primary mt-2 w-100 text-uppercase pt-2">Image</button>
@@ -110,7 +110,7 @@
                   <button id="redoBt" class="btn btn-primary mt-2 w-100 text-uppercase pt-2">Redo</button>
               </div>
 
-      </div>
+      </div>-->
 
       <div id="footer" class="footer container-fluid d-flex flex-column justify-content-center align-items-center mt-5">
           <div id="footercopy" class="container text-center mw-50">
