--- a/views/index.html
+++ b/views/index.html
@@ -93,8 +93,10 @@
       <div id="exports" class="d-flex justify-content-center w-75 flex-fill mb-5">
               <div id="downloading" class="flex-fill border-right px-4">
                   <h2 class="text-left mb-1">Download your creation</h2>
-                  <button id="dlPhoto" class="btn btn-primary mt-2 w-100 text-uppercase pt-2">Image</button>
-                  <button id="dlVideo" class="btn btn-primary mt-2 w-100 text-uppercase pt-2">Video</button>
+                  <div class="d-flex mt-2 w-100 pt-2">
+                    <button id="dlPhoto" class="btn dlbtn btn-primary text-uppercase flex-fill">Image<div></div></button>
+                    <button id="dlVideo" class="btn dlbtn btn-primary text-uppercase flex-fill ml-3">Video<div></div></button>
+                  </div>
               </div>
   
               <div id="sharing" class="d-flex flex-column align-items-start flex-fill border-right px-4">
