--- a/views/index.html
+++ b/views/index.html
@@ -70,13 +70,13 @@
                       <div class="form-group row">
                           <label for="firstInput" class="col-sm-3 col-form-label text-muted">Line 1</label>
                           <div class="col-sm-6 pl-0">
-                            <input id="firstInput" class="form-control" name="firstname" type="text" maxlength="24">
+                            <input id="firstInput" class="form-control" name="firstname" type="text" maxlength="8" autocomplete="off">
                           </div>
                         </div>
                       <div class="form-group row">
                           <label for="lastInput" class="col-sm-3 col-form-label text-muted">Line 2</label>
                           <div class="col-sm-6 pl-0">
-                            <input id="lastInput" class="form-control" name="lastname" type="text" maxlength="24">
+                            <input id="lastInput" class="form-control" name="lastname" type="text" maxlength="8" autocomplete="off">
                           </div>
                       </div>
                       <div class="form-group row">
@@ -90,7 +90,7 @@
 
       </div>
 
-      <!--<div id="exports" class="d-flex justify-content-center w-75 flex-fill mb-5">
+      <div id="exports" class="d-flex justify-content-center w-75 flex-fill mb-5 pt-5">
               <div id="downloading" class="flex-fill border-right px-4">
                   <h2 class="text-left mb-1">Download your creation</h2>
                   <div class="d-flex mt-2 w-100 pt-2">
@@ -112,7 +112,7 @@
                   <button id="redoBt" class="btn btn-primary mt-2 w-100 text-uppercase pt-2">Redo</button>
               </div>
 
-      </div>-->
+      </div>
 
       <div id="footer" class="footer container-fluid d-flex flex-column justify-content-center align-items-center mt-5">
           <div id="footercopy" class="container text-center mw-50">
