Working functionality to check if video is already encoded and stored in S3 at download.

--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,7 @@
     <script src="js/objects.js"></script>
     <script src="js/letters.js"></script>
     <script src="js/drawing.js"></script>
+    <script src="js/buttons.js"></script>
     <script src="js/capture.js"></script>
 
     <script src="js/forms.js" defer></script>
