--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="CCapture.all.min.js"></script>
     <script src="js/helpers.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -38,6 +39,7 @@
     <script src="js/ui.js" defer></script>
 
     <script src="js/fb-sdk.js"></script>
+    
 
     <script src="js/main.js" defer></script>
   </head>
