--- a/views/index.html
+++ b/views/index.html
@@ -106,7 +106,7 @@
 
                   <div id="sharing" class="d-flex flex-column align-items-start flex-fill border-right px-4">
                     <h2 class="text-left">Share</h2>
-                    <input id="shareurl" name="shareURL" type="text" class="form-control" autocomplete="off">
+                    <input id="shareurl" name="shareURL" placeholder="Click the 'Video' button to generate" type="text" class="form-control" autocomplete="off" disabled>
                     <div class="d-flex flex-fill mt-3">
                       <button id="shareTwitter">
                           <img src="../images/icons/twitter.png" class="socialicon">
