--- a/views/index.html
+++ b/views/index.html
@@ -99,8 +99,8 @@
                   <div id="downloading" class="flex-fill border-right px-4">
                       <h2 class="text-left mb-1">Download your creation</h2>
                       <div class="d-flex mt-2 w-100 pt-2">
-                        <img id="dlPhoto" src="../images/icons/button-image-download.png" class="dlbtn">
-                        <img id="dlVideo" src="../images/icons/button-video-download.png" class="dlbtn ml-3">
+                        <a href=""><img id="dlPhoto" src="../images/icons/button-image-download.png" class="dlbtn"></a>
+                        <a href=""><img id="dlVideo" src="../images/icons/button-video-download.png" class="dlbtn ml-3"></a>
                       </div>
                   </div>
 
