Added back in photo URL

--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
                   <div id="downloading" class="flex-fill border-right px-4">
                       <h2 class="text-left mb-1">Download your creation</h2>
                       <div class="d-flex mt-2 w-100 pt-2">
-                        <button id="dlPhoto" class="btn dlbtn btn-primary text-uppercase flex-fill">Image<div></div></button>
+                        <a href="../output/screenshot.jpg"><button id="dlPhoto" class="btn dlbtn btn-primary text-uppercase flex-fill">Image<div></div></button></a>
                         <button id="dlVideo" class="btn dlbtn btn-primary text-uppercase flex-fill ml-3">Video<div></div></button>
                       </div>
                   </div>
