--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
       <div id="canvas-holder" class="d-flex justify-content-center mx-lg-5 mx-0 order-2 order-sm-1 order-lg-3">
         <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute" src="../images/misc/title card.jpg">
         <div id="replay-holder" class="d-flex w-100 h-100 justify-content-center align-items-center zindex-tooltip position-absolute"><img id="replay" class="hidden" src="../images/icons/button-replay.png"></div>
-        <div id="progress-bar" class="d-flex w-100 h-100 justify-content-start align-items-end zindex-tooltip position-absolute"><div id="progress" class="text-center bg-secondary text-white pt-1 shown" height="5">37%</div></div>
+        <div id="progress-bar" class="d-flex w-100 h-100 justify-content-start align-items-end zindex-tooltip position-absolute"><div id="progress" class="text-center bg-success text-white pt-3 pb-2 shown" height="5">37%</div></div>
 ​
         <!-- p5 canvas goes here -->
       </div>
