--- a/views/index.html
+++ b/views/index.html
@@ -49,6 +49,8 @@
         <img src="../images/misc/logo.png" class="img-fluid">
       </div>
       
+
+
       <div id="bodytext" class="container pt-5 pb-0 px-4 py-sm-0 pb-lg-4 w-100 w-sm-75  order-3 order-sm-3 order-lg-2">
           <h3 class="text-center pt-1 pt-lg-3">Don’t just watch Silicon Valley, BE the Valley.</h3>
           <p class="text-center px-4">Celebrate the final season with this custom title sequence generator. Add your name (or whatever you want... within reason) and share your creation by downloading or sharing directly to Facebook or Twitter.</p>
@@ -56,9 +58,11 @@
 ​
       <div id="canvas-holder" class="d-flex justify-content-center mx-lg-5 mx-0 order-2 order-sm-1 order-lg-3">
         <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute" src="../images/misc/title card.jpg">
-        <div id="replay-holder" class="d-flex w-100 h-100 justify-content-center align-items-center zindex-tooltip position-absolute"><img id="replay" class="hidden" src="../images/icons/button-replay.png"></div>
-        <div id="progress-bar" class="d-flex w-100 h-100 justify-content-start align-items-end zindex-tooltip position-absolute"><div id="progress" class="text-center bg-success text-white pt-3 pb-2 shown" height="5">37%</div></div>
-​
+        <div id="replay-holder" class="d-flex w-100 h-100 justify-content-center align-items-center zindex-tooltip position-absolute hidden"><img id="replay" class="hidden" src="../images/icons/button-replay.png"></div>
+        <div id="progress-bar" class="d-flex w-100 h-100 justify-content-start align-items-end zindex-tooltip position-absolute hidden"><div id="progress" class="text-center bg-success text-white pt-3 pb-2 shown" height="5">37%</div></div>
+        
+        <video id="video-preview" class="hidden" style="width: 100%; height: 100%; position: absolute; z-index: 9999 !important;" src=""></video>
+
         <!-- p5 canvas goes here -->
       </div>
 ​
